syntax = "proto3";

option csharp_namespace = "Skyra.Grpc.Services";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "shared.proto";

package YoutubeSubscription;

service YoutubeSubscription {
  rpc ManageSubscription(SubscriptionManageRequest) returns (Result);
  rpc GetSubscriptions(google.protobuf.Empty) returns (SubscriptionResponse);
  rpc UpdateSubscriptionSettings(NotificationSettingsUpdate) returns (Result);
  rpc SubscriptionNotifications(google.protobuf.Empty) returns (stream SubscriptionNotification);
}

enum Action {
  subscribe = 0;
  unsubscribe = 1;
}

message SubscriptionManageRequest {
  string channel_url = 1;
  string guild_id = 2;
  string notification_message = 3;
  string guild_channel_id = 4;
  Action type = 5;
}

message SubscriptionResponse {
  repeated Subscription subscriptions = 1;
}

message Subscription {
  string channel_id = 1;
  string channel_title = 2;
  repeated string guild_ids = 3;
}

message SubscriptionNotification {
  string video_id = 1;
  string video_title = 2;
  string thumbnail_url = 3;
  string channel_name = 4;
  google.protobuf.Timestamp published_at = 5;
  repeated NotificationChannel channels = 6;
}

message NotificationChannel {
  string guild_id = 1;
  string channel_id = 2;
  string message = 3;
}

message NotificationSettingsUpdate {
  string message = 1;
  string channel = 2;
  string guild_id = 3;
}
